fixed footer links on casestudy, design sketch on mobile

--- a/src/assets/scss/core/sections/_cs-design.scss
+++ b/src/assets/scss/core/sections/_cs-design.scss
@@ -12,7 +12,7 @@
 	margin-left: 50vw;
 	margin-top: -2vh;
 	width: 150px;
-	
+	display: none;
 }
 	
 }
